eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-bank-api-deployment
  labels:
    app: go-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-bank-api
  template:
    metadata:
      labels:
        app: go-bank-api
    spec:
      containers:
      - name: go-bank-api
        image: 122745485169.dkr.ecr.sa-east-1.amazonaws.com/gobank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
