eks/ingress.yaml
#https://kubernetes.io/docs/concepts/services-networking/ingress/

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.go-bank.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.go-bank.org
    secretName: go-bank-api-cert
